# geda-gaf

./: Makefile.am  configure.ac
docs/: Makefile.am
gattrib/design/: attribute_sheet_proposal.tex
gschem/include/: gschem_toplevel.h  prototype.h
gschem/lib/: system-gschemrc.scm
gschem/src/: Makefile.am  g_keys.c  g_register.c  i_callbacks.c  x_attrib_sheet.c
libgattrib/: .gitignore  Makefile.am  libgattrib.pc.in
libgattrib/include/: Makefile.am
libgattrib/include/libgattrib/: libgattrib.h  prototype.h
libgattrib/src/: .gitignore  Makefile.am  libgattrib.c
m4/: geda-docs.m4
